--- a/Dashboard.html
+++ b/Dashboard.html
@@ -14,6 +14,7 @@
 <body>
     <div class="container-fluid">
         <div class="row flex-nowrap">
+            <!-- Side Menu Code Starts -->
             <div class="col-auto col-md-2 px-sm-2 px-0 side-menu">
                 <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white">
                     <h1 class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white ">
@@ -85,6 +86,9 @@
                     </ul>
                 </div>
             </div>
+            <!-- Side Menu Code Ends -->
+
+            <!-- Main Section Code Starts -->
             <div class="col-auto col-12 col-md-7 py-3 px-5 main-view">
                 <div class="row flex-nowrap">
                     <div class="col-auto col-12 col-md-8 py-3">
@@ -157,108 +161,229 @@
                             <!-- Left and right controls/icons -->
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselslides"
                                 data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon"></span>
+                                <span class="bi-chevron-left fs-5"></span>
                             </button>
                             <button class="carousel-control-next" type="button" data-bs-target="#carouselslides"
                                 data-bs-slide="next">
-                                <span class="carousel-control-next-icon"></span>
+                                <span class="bi-chevron-right fs-5"></span>
                             </button>
                         </div>
                         <h4 class="fw-bold mt-5 text-white">Popular on TinyMoviez</h4>
-                        <div class="row tinymoviez-div text-white mt-4">
-                            <div class="col-sm-4">
-                              <div class="card card1">
-                                <div class="card-body">
-                                  <h5 class="card-title">Loki</h5>
-                                  <i class="bi-star-fill"></i>
-                                  <i class="bi-star-fill"></i>
-                                  <i class="bi-star-fill"></i>
-                                  <i class="bi-star-fill"></i>
-                                  <i class="bi-star-half"></i>
-                                  <br />
-                                  <br />
-                                  <br />
-                                  <br />
-                                  <br />
-                                  <br />
-                                  <br />
-                                 <div class="d-flex justify-content-between fw-bold">
-                                     <div>6 Ep</div>
-                                     <div>Superhero</div>
-                                 </div>
-                                 <div class="d-flex justify-content-between mt-1">
-                                    <div><i class="bi-plus fs-4"></i></div>
-                                    <button type="button">Watch</button>
+                        <div class="row tinymoviez-div text-white ">
+                            <div class="col-lg-4 col-sm-6 mt-4">
+                                <div class="card card1">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Loki</h5>
+                                        <i class="bi-star-fill"></i>
+                                        <i class="bi-star-fill"></i>
+                                        <i class="bi-star-fill"></i>
+                                        <i class="bi-star-fill"></i>
+                                        <i class="bi-star-half"></i>
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <div class="d-flex justify-content-between fw-bold">
+                                            <div>6 Ep</div>
+                                            <div>Superhero</div>
+                                        </div>
+                                        <div class="d-flex justify-content-between mt-1">
+                                            <div><i class="bi-plus fs-4"></i></div>
+                                            <button type="button">Watch</button>
+                                        </div>
+                                    </div>
                                 </div>
-                                </div>
-                              </div>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-lg-4 col-sm-6 mt-4">
                                 <div class="card card2">
                                     <div class="card-body">
-                                      <h5 class="card-title">Chernobyi</h5>
-                                      <i class="bi-star-fill"></i>
-                                      <i class="bi-star-fill"></i>
-                                      <i class="bi-star-fill"></i>
-                                      <i class="bi-star-fill"></i>
-                                      <i class="bi-star-fill"></i>
-                                      <br />
-                                      <br />
-                                      <br />
-                                      <br />
-                                      <br />
-                                      <br />
-                                      <br />
-                                     <div class="d-flex justify-content-between fw-bold">
-                                         <div>5 Ep</div>
-                                         <div>Mini Series</div>
-                                     </div>
-                                     <div class="d-flex justify-content-between mt-1">
-                                        <div><i class="bi-plus fs-4"></i></div>
-                                        <button type="button">Watch</button>
+                                        <h5 class="card-title">Chernobyi</h5>
+                                        <i class="bi-star-fill"></i>
+                                        <i class="bi-star-fill"></i>
+                                        <i class="bi-star-fill"></i>
+                                        <i class="bi-star-fill"></i>
+                                        <i class="bi-star-fill"></i>
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <div class="d-flex justify-content-between fw-bold">
+                                            <div>5 Ep</div>
+                                            <div>Mini Series</div>
+                                        </div>
+                                        <div class="d-flex justify-content-between mt-1">
+                                            <div><i class="bi-plus fs-4"></i></div>
+                                            <button type="button">Watch</button>
+                                        </div>
                                     </div>
-                                    </div>
-                                  </div>
+                                </div>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-lg-4 col-sm-6 mt-4">
                                 <div class="card card3">
                                     <div class="card-body">
-                                      <h5 class="card-title">Rick and Morty</h5>
-                                      <i class="bi-star-fill"></i>
-                                      <i class="bi-star-fill"></i>
-                                      <i class="bi-star-fill"></i>
-                                      <i class="bi-star-fill"></i>
-                                      <i class="bi-star-fill"></i>
-                                      <br />
-                                      <br />
-                                      <br />
-                                      <br />
-                                      <br />
-                                      <br />
-                                      <br />
-                                     <div class="d-flex justify-content-between fw-bold">
-                                         <div>49 Ep</div>
-                                         <div>Fantacy</div>
-                                     </div>
-                                     <div class="d-flex justify-content-between mt-1">
-                                        <div><i class="bi-plus fs-4 fw-bold"></i></div>
-                                        <button type="button">Watch</button>
+                                        <h5 class="card-title">Rick and Morty</h5>
+                                        <i class="bi-star-fill"></i>
+                                        <i class="bi-star-fill"></i>
+                                        <i class="bi-star-fill"></i>
+                                        <i class="bi-star-fill"></i>
+                                        <i class="bi-star-fill"></i>
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <div class="d-flex justify-content-between fw-bold">
+                                            <div>49 Ep</div>
+                                            <div>Fantacy</div>
+                                        </div>
+                                        <div class="d-flex justify-content-between mt-1">
+                                            <div><i class="bi-plus fs-4 fw-bold"></i></div>
+                                            <button type="button">Watch</button>
+                                        </div>
                                     </div>
-                                    </div>
-                                  </div>
-                              </div>
-                          </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="tab-pane fade" id="anime-tab" role="tabpanel" aria-labelledby="anime">Anime
                         Comming Soon ........</div>
                 </div>
             </div>
+            <!-- Main Section Code Ends -->
+
+            <!-- Right panel Code Starts -->
             <div class="col-auto col-12 col-md-3 py-3 px-4 right-menu text-white">
                 <div class="d-flex justify-content-between align-items-center mt-1">
                     <div><i class="bi-bell fs-4 fw-bold"></i></div>
-                    <div>Samantha<i class="bi-chevron-down px-1"></i><img src="images/userimg.jpg" height="30px" width="30px" class="rounded" alt="userimg"></div>
+                    <div>Samantha<i class="bi-chevron-down px-1"></i><img src="images/userimg.jpg" height="30px"
+                            width="30px" class="rounded" alt="userimg"></div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center mt-5">
+                    <div class="fs-5 fw-bold">Continue<i class="bi-chevron-left fs-6 px-1"></i><i
+                            class="bi-chevron-right fs-6"></i></div>
+                    <div>See More<i class="bi-chevron-right px-1"></i></div>
+                </div>
+                <div class="row flex-nowrap mt-3">
+                    <div class="col-lg-9 col-md-11 col-12">
+                        <div class="card p-2">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <img class="col-3" src="images/rightpanelimg1.jpg" height="60px" width="60px"
+                                    class="rounded" alt="userimg">
+                                <div class="col-8">
+                                    <div class="fw-bold">WandaVision</div>
+                                    <div>1 Episode Left</div>
+                                    <div class="progress mt-2">
+                                        <div class="progress-bar" style="width:90%"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-between mt-2">
+                                <button type="button" class="drop fw-bold">Drop</button>
+                                <button type="button" class="watch fw-bold">Watch</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-9 col-md-11 col-12">
+                        <div class="card p-2">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <img class="col-3" src="images/rightpanelimg1.jpg" height="60px" width="60px"
+                                    class="rounded" alt="userimg">
+                                <div class="col-8">
+                                    <div class="fw-bold">WandaVision</div>
+                                    <div>1 Episode Left</div>
+                                    <div class="progress mt-2">
+                                        <div class="progress-bar" style="width:90%"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-between mt-2">
+                                <button type="button" class="drop fw-bold">Drop</button>
+                                <button type="button" class="watch fw-bold">Watch</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center mt-5">
+                    <div class="fs-5 fw-bold">Top Rated<i class="bi-chevron-left fs-6 px-1"></i><i
+                            class="bi-chevron-right fs-6"></i></div>
+                    <div>See More<i class="bi-chevron-right px-1"></i></div>
+                </div>
+                <div class="row flex-nowrap mt-3">
+                    <div class="col-lg-9 col-12">
+                        <div class="card card1">
+                            <div class="card-body">
+                                <div class="fw-bold">Supernatural</div>
+                                <div class="d-flex justify-content-between mt-2">
+                                    <div>320 Ep</div>
+                                    <div>Horror, Fantacy</div>
+                                </div>
+                                <div class="d-flex justify-content-between mt-1">
+                                    <div><i class="bi-plus fs-4 fw-bold"></i></div>
+                                    <button type="button">Watch</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-9 col-12">
+                        <div class="card card2">
+                            <div class="card-body">
+                                <div class="fw-bold">Supernatural</div>
+                                <div class="d-flex justify-content-between mt-2">
+                                    <div>320 Ep</div>
+                                    <div>Horror, Fantacy</div>
+                                </div>
+                                <div class="d-flex justify-content-between mt-1">
+                                    <div><i class="bi-plus fs-4 fw-bold"></i></div>
+                                    <button type="button">Watch</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center mt-5">
+                    <div class="fs-5 fw-bold">Genres<i class="bi-chevron-left fs-6 px-1"></i><i
+                            class="bi-chevron-right fs-6"></i></div>
+                    <div>See More<i class="bi-chevron-right px-1"></i></div>
+                </div>
+                <div class="row flex-nowrap mt-3">
+                    <div class="col-lg-9 col-md-11 col-12">
+                        <div class="card card3 d-flex align-items-center justify-content-center fw-bold fs-6">
+                            Drama
+                        </div>
+                    </div>
+                    <div class="col-lg-9 col-md-11 col-12">
+                        <div class="card card3">
+                            <div class="card-body">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row flex-nowrap mt-3">
+                    <div class="col-lg-9 col-md-12 col-12">
+                        <div class="card card4 d-flex align-items-center justify-content-center fw-bold fs-6">
+                            Sitcom
+                        </div>
+                    </div>
+                    <div class="col-lg-9 col-md-12 col-12">
+                        <div class="card card3">
+                            <div class="card-body">
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <!-- Right panel Code Ends -->
+
         </div>
     </div>
 </body>
